Fix scrollbar in modal window in task create page

--- a/itv-frontend/assets/sass/layout/_header.scss
+++ b/itv-frontend/assets/sass/layout/_header.scss
@@ -229,6 +229,9 @@
           width: auto;
           height: 42px;
           border-radius: 8px 0 0 8px;
+          &_default-image {
+            background-size: 42px 66.75%, 42px 42px;
+          }
         }
 
         &:hover {
